--- a/component/calendar/Calendar.less
+++ b/component/calendar/Calendar.less
@@ -1,8 +1,9 @@
-.container {
+.ydl-calendar-container {
   width: 100%;
-
-  .titleBox {
+  .fix{
     position: fixed;
+  }
+  .titleBox {
     top: 0;
     width: 100%;
     .title {
@@ -22,7 +23,6 @@
     margin-top: 50px;
     .monthTitle {
       padding: 20px 0;
-      display: flex;
       text-align: center;
       align-items: center;
       width: 150px;
