--- a/component/calendar/Calendar.less
+++ b/component/calendar/Calendar.less
@@ -17,10 +17,13 @@
       }
     }
   }
+  .bodyTop{
+    margin-top: 50px;
+  }
   .monthBox {
     clear: both;
     margin-bottom: 30px;
-    margin-top: 50px;
+
     .monthTitle {
       padding: 20px 0;
       text-align: center;
